force-app/main/default/objects/User/fields/TPM_Default_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>TPM_Default_Sales_Organization__c</fullName>
    <description>Default Sales Org upon login to TPM</description>
    <inlineHelpText>Default Sales Org upon login to TPM</inlineHelpText>
    <label>Default Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Sales_Org</valueSetName>
    </valueSet>
</CustomField>