force-app/main/default/objects/User/fields/TPM_Is_OutOfOffice__c.field-meta.xml
<CustomField>
    <fullName>TPM_Is_OutOfOffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is OutOfOffice</label>
    <type>Checkbox</type>
</CustomField>