force-app/main/default/objects/User/fields/TPM_Persona__c.field-meta.xml
<CustomField>
    <fullName>TPM_Persona__c</fullName>
    <defaultValue>(&apos;Account Executive&apos;)</defaultValue>
    <description>Persona of the User to derive users accessibility</description>
    <label>Persona</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Business Administrator</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Trade Payments</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Sales Finance</fullName>
            </value>
            <value>
                <fullName>Sales Managers</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
                <default>true</default>
                <label>Account Executive</label>
            </value>
            <value>
                <fullName>Product Supply Chain</fullName>
            </value>
            <value>
                <fullName>External Account Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>