force-app/main/default/objects/User/fields/TPM_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>TPM_Sales_Org__c</fullName>
    <description>Sales Orgs that user has access to</description>
    <label>Available Sales Organization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Sales_Org</valueSetName>
    </valueSet>
</CustomField>