force-app/main/default/objects/User/fields/TPM_Subsegment__c.field-meta.xml
<CustomField>
    <fullName>TPM_Subsegment__c</fullName>
    <description>SubSegment of the customer</description>
    <label>Subsegment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TPM_Subsegment</valueSetName>
    </valueSet>
</CustomField>