force-app/main/default/objects/User/validationRules/TPM_Manager_For_Approval_Level_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Manager_For_Approval_Level_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( ISPICKVAL(TPM_ApprovalLevel__c, &quot;NA&quot;)),
NOT( ISPICKVAL(TPM_ApprovalLevel__c, &quot;9&quot;)),
ISBLANK(ManagerId) 
)</errorConditionFormula>
    <errorMessage>The manager field on the User Record is mandatory for all users with approval level less than 9 and NA.</errorMessage>
</ValidationRule>